# web-infrastructure-assignment-1

./: CMakeLists.txt
Debug/: web-infrastructure-assignment-1
include/wi-proxy/: ClientSocket.hpp  ClientSocketListener.hpp  GlobalItems.hpp  HTTPMessage.hpp  ServerSocket.hpp  TCPSocket.hpp
src/: HTTPMessage.cpp  TCPSocket.cpp  main.cpp
web-infrastructure-assignment-1.build/Debug/ALL_BUILD.build/: Script-3EDB423D1A8B555F5E53F77D.sh
web-infrastructure-assignment-1.build/Debug/ZERO_CHECK.build/: Script-BE6641A27C4CB1F203B5C0B6.sh
web-infrastructure-assignment-1.build/Debug/web-infrastructure-assignment-1.build/Objects-normal/x86_64/: main.d  web-infrastructure-assignment-1.LinkFileList
web-infrastructure-assignment-1.xcodeproj/: project.pbxproj
web-infrastructure-assignment-1.xcodeproj/project.xcworkspace/xcuserdata/roshansevalia.xcuserdatad/: UserInterfaceState.xcuserstate
web-infrastructure-assignment-1.xcodeproj/xcuserdata/roshansevalia.xcuserdatad/xcschemes/: xcschememanagement.plist
